[package]
name = "link-keeper-cli"
version = "0.1.0"
authors = ["Jesper Håkansson <jesper@jesperh.se>"]
edition = "2018"

[dependencies]
link-keeper = { version = "0.1.0", path = "../../" }
link-keeper-git-backend = { version = "0.1.0", path = "../git-backend"}
link-keeper-github-backend = { version = "0.1.0", path = "../github-backend"}
clap = "2.32.0"
chrono = "0.4.6"
tui = "0.4.0"
termion = "1.5.1"
dialoguer = "0.3.0"
dirs = "1.0.5"
toml = "0.4.10"
serde_json = "1.0.39"
console = "0.7.5"
failure = "0.1.5"

