[package]
name = "link-keeper-git-backend"
version = "0.1.0"
authors = ["Jesper Håkansson <jesper@jesperh.se>"]
edition = "2018"

[dependencies]
link-keeper = { version = "0.1.0", path = "../../" }
toml = "0.4.10"
git2 = "0.8.0"
failure = "0.1.5"

[dependencies.serde]
version = "1.0.89"
features = ["derive"]
